kg8s/seed/seed007-oidc/auth/istio/devlogs/custom-promethtus/authz-prometheus.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: prometheus-oauth2-proxy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: prometheus
  action: CUSTOM
  provider:
    # Extension provider configured when we installed Istio
    name: oauth2-proxy
  rules:
    - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: prometheus-aud-allow
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: prometheus
  action: ALLOW
  rules:
    - when:
        - key: request.auth.audiences
          values: ["prometheus101"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: prometheus-kiali-allow
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: prometheus
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["istio-system"]
